--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -6,7 +6,7 @@
 }
 
 .cartItem {
-  width: 400px;
+  width: 600px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -28,10 +28,20 @@
   font-weight: bolder;
 }
 
+.checkout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .checkout button {
-  width: 40px;
-  height: auto;
-  background-color: aquamarine;
-  color: black;
+  width: 200px;
+  margin-top: 5px;
+  text-decoration: none;
+  background-color: black;
+  padding: 20px;
+  color: whitesmoke;
   border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
