--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -7,9 +7,9 @@
   width: 100%;
   height: auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .product {
